<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_CtyXe"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/ctyxe" />
        <item
            android:id="@+id/nav_Xe"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/tenxe" />
        <item
            android:id="@+id/nav_DonDatHang"
            android:icon="@drawable/ic_rate_review_black_24dp"
            android:title="@string/dondathang" />
        <item
            android:id="@+id/nav_ChiTiet"
            android:icon="@drawable/ic_details_black_24dp"
            android:title="@string/menu_chitiet" />
        <item
            android:id="@+id/logoutfragment"
            android:icon="@drawable/ic_input_black_24dp"
            android:title="@string/logout" />
    </group>
</menu>
