<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Add_Edit_Xe">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:clipToPadding="false"
        android:foregroundGravity="center"
        android:overScrollMode="never">


    </androidx.viewpager.widget.ViewPager>

    <EditText
        android:id="@+id/et_add_edit_MaXe"
        android:drawableLeft="@drawable/ic_code_black_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/tvmaxe" />

    <EditText
        android:id="@+id/et_add_edit_TenXe"
        android:drawableLeft="@drawable/ic_border_color_black_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/tvtenxe" />

    <EditText
        android:id="@+id/et_add_edit_DungTich"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/tvdungtichxe"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_add_edit_SoLuong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/tvsoluongxe"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sprmaloai"
            android:textSize="22dp" />

        <Spinner
            android:id="@+id/sprMaLoai_add_edit_xe"
            android:layout_width="100dp"

            android:layout_height="match_parent"
            android:background="@color/design_default_color_on_secondary"
            android:popupBackground="@color/design_default_color_on_secondary" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/them_xe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/them" />

        <Button
            android:id="@+id/Sua_xe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sua" />

        <Button
            android:id="@+id/Xoa_xe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xoa" />

        <Button
            android:id="@+id/TroVe_xe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trove" />
    </LinearLayout>
</LinearLayout>