<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_match"
    android:gravity="top"
    android:orientation="horizontal">

    <LinearLayout
        style="@style/match_wrap"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout style="@style/LinearLayout_chitiet">

            <TextView
                style="@style/wrap_wrap_TextView_chitiet"
                android:text="@string/maHD" />

            <Spinner
                android:id="@+id/spr_ct_maHD"
                style="@style/match_wrap_spn_chitiet" />
        </LinearLayout>

        <LinearLayout

            style="@style/LinearLayout_chitiet">

            <TextView
                style="@style/wrap_wrap_TextView_chitiet"
                android:text="@string/tvmaxe" />

            <Spinner
                android:id="@+id/spr_ct_maXe"
                style="@style/match_wrap_spn_chitiet" />
        </LinearLayout>


        <LinearLayout style="@style/LinearLayout_chitiet">

            <TextView
                style="@style/wrap_wrap_TextView_chitiet"
                android:text="@string/soLuongDonDatHang" />

            <TextView
                android:id="@+id/tvSoLuongDH"
                style="@style/match_match_TextView_margin_weight"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout style="@style/LinearLayout_chitiet">

            <TextView
                style="@style/wrap_wrap_TextView_chitiet"
                android:text="@string/donGia" />

            <TextView
                android:id="@+id/tvDonGia"
                style="@style/match_match_TextView_margin_weight" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <Button

            style="@style/wrap_wrap"
            android:drawableLeft="@drawable/ic_edit_black_24dp"
            android:text="@string/sua" />

        <Button
            style="@style/wrap_wrap"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_remove_circle_outline_black_24dp"
            android:text="@string/xoa" />

    </LinearLayout>

</LinearLayout>