<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ctyxe_new">

    <ImageView
        android:id="@+id/img_ctyxe_new"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/mercedes_logo"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etmaloai_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/maLoai" />

        <EditText
            android:id="@+id/ettenloai_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/tenLoai" />

        <EditText
            android:id="@+id/etxuatxu_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/xuatXu" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Spinner
            android:id="@+id/spinerDoi_img_new"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@color/design_default_color_on_secondary"
            android:popupBackground="@color/design_default_color_on_secondary"
            android:text="@string/doianh"
            android:textColor="@color/design_default_color_on_primary" />

        <Button
            android:id="@+id/btnThem_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/them" />

        <Button
            android:id="@+id/btnTroVe_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trove" />
    </LinearLayout>
</LinearLayout>