<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_DonDatHang">

    <fragment
        android:id="@+id/nav_CtyXe"
        android:name="tdc.edu.vn.quanly_dathang_xemay.ui.CtyXe.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_ctyxe">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="tdc.edu.vn.quanly_dathang_xemay.ui.CtyXe.HomeFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_ctyxe">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_CtyXe" />

        <argument
            android:name="myArg"
            app:argType="string" />
        <argument
            android:name="mylogout"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_Xe"
        android:name="tdc.edu.vn.quanly_dathang_xemay.ui.Xe.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_xe" />

    <fragment
        android:id="@+id/nav_DonDatHang"
        android:name="tdc.edu.vn.quanly_dathang_xemay.ui.DonDatHang.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_dondathang" />
    <fragment
        android:id="@+id/logoutfragment"
        android:name="tdc.edu.vn.quanly_dathang_xemay.ui.LogOut.LogOut"
        android:label="fragment_log_out"
        tools:layout="@layout/fragment_log_out" />
    <fragment
        android:id="@+id/nav_ChiTiet"
        android:name="tdc.edu.vn.quanly_dathang_xemay.ui.ChiTiet.ChiTietModel"
        android:label="@string/menu_chitiet"
        tools:layout="@layout/fragment_chi_tiet_don_dat_hang" />
</navigation>