<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linerLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/logo_ctyxe"
        android:layout_width="70dp"
        android:layout_height="70dp" />


    <LinearLayout
        android:id="@+id/liner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/maLoai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maLoai" />

        <TextView
            android:id="@+id/tenLoai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenLoai" />

        <TextView
            android:id="@+id/xuatXu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xuatXu" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right">

        <Button
            android:id="@+id/btnEditctyxe"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/ic_edit_black_24dp"
            android:text="@string/edit" />
    </LinearLayout>

</LinearLayout>