<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_match"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_assignment_black_24dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvMaHD"
            style="@style/wrap_wrap"
            android:layout_marginBottom="20dp"
            android:text="@string/maHD" />

        <TextView
            android:id="@+id/tvNgayLap"
            style="@style/wrap_wrap"
            android:text="@string/ngayLap" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnEdit_DDH"
            style="@style/wrap_wrap"
            android:drawableLeft="@drawable/ic_edit_black_24dp"
            android:text="@string/edit" />
    </LinearLayout>

</LinearLayout>