<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/liner_animation"
        style="@style/match_wrap"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/waiting_shop_img_xe"
            android:layout_width="90dp"
            android:layout_height="90dp" />

        <LinearLayout

            style="@style/wrap_match"
            android:layout_marginLeft="5dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_waiting_shop_tenxe"
                style="@style/wrap_wrap"
                android:text="@string/tvtenxe"
                android:textSize="20dp" />

            <TextView
                style="@style/wrap_wrap"

                android:text="@string/soluongHienCo" />

            <TextView
                android:id="@+id/tv_waiting_shop_soluongxe"
                style="@style/wrap_wrap"

                android:text="@string/tvsoluongxe" />
        </LinearLayout>

        <LinearLayout
            style="@style/wrap_match"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView

                style="@style/match_wrap_center"
                android:text="@string/donGia"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_waiting_shop_DonGia"
                style="@style/match_wrap_center"
                android:text="@string/donGia"
                android:textSize="20dp" />

            <TextView

                style="@style/match_wrap_center"
                android:text="@string/tong"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_waiting_shop_Tong"
                style="@style/match_wrap_center"
                android:text="@string/tong"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout

            style="@style/match_wrap"
            android:gravity="right"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ib_waiting_shop_accept"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_check_circle_black_24dp" />

            <ImageButton
                android:id="@+id/ib_waiting_shop_destroy"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_remove_circle_black_24dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>