<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#86F6DA"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFA200"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/login"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="@+id/etInputPass"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etInputUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:background="#EFD6D6"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/inputuser"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="#F86A00"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etInputPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:background="#EFD6D6"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/inputpass"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/etInputUser"
        app:layout_constraintTop_toBottomOf="@+id/etInputUser" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/submit"
        android:drawableLeft="@drawable/ic_open_in_browser_black_24dp"
        app:layout_constraintEnd_toStartOf="@+id/btnExit"
        app:layout_constraintTop_toBottomOf="@+id/etInputPass" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="@+id/etInputPass" />

    <TextView
        android:id="@+id/tvResgiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/resgiter"
        android:textColor="#0015FF"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExit" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:background="#FBFBFB"
        android:gravity="center"
        android:text="@string/designer"
        android:textColor="#FF0000"
        android:textSize="30dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>