<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="40dp"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginBottom="30dp"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="380dp">

            <ImageView
                android:id="@+id/image_xe"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/mercedes1" />

            <TextView
                android:id="@+id/tvmaxe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_xe"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/tvmaxe"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tvtenxe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvmaxe"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/tvtenxe"
                android:textSize="20dp" />

            <TextView

                android:id="@+id/tvdungtich"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_xe"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:text="@string/tvdungtichxe"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tvmaloai_ctyxe_xe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_xe"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/tvmaxe"
                android:text="@string/maLoai"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tvsoluongxe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvtenxe"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:text="@string/tvsoluongxe"
                android:textSize="20dp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>